--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -1,6 +1,6 @@
 <div id="toolbox">
     <ul>
-        <li class="checkbox"><label><input type="checkbox" name="checkall" /></label></li>
+        <li class="checkbox"><label title="Select all"><input type="checkbox" name="checkall" /></label></li>
         {{#hasFilters}}
         <li class="clearFilter">
             {{#filterAlbum}}
