Change input type to email

--- a/spirit/views/user-edit.html
+++ b/spirit/views/user-edit.html
@@ -9,7 +9,7 @@
         <ul class="form">
             <li>
                 <label><span>Email:</span>
-                    <input type="text" value="{{email}}" {{^editable}}disabled{{/editable}} required name="email" maxlength="254" />
+                    <input type="email" value="{{email}}" {{^editable}}disabled{{/editable}} required name="email" maxlength="254" />
                 </label>
             </li>
             <li>
