--- a/spirit/views/css/form.css
+++ b/spirit/views/css/form.css
@@ -34,7 +34,8 @@ form h3 {
         letter-spacing: 2px;
         text-transform: uppercase;
     }
-    .form label input[type="text"], .form label input[type="password"], .form label input[type="number"],
+    .form label input[type="text"], .form label input[type="password"],
+    .form label input[type="number"], .form label input[type="email"],
     .form label textarea , .form label .ace {
         display: block;
         padding: 0;
