--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -19,7 +19,7 @@
         <li class="upload"><a href="{{baseUrl}}spirit/photos/upload">Upload</a></li>
         <li class="edit"><a href="{{baseUrl}}spirit/photos/edit">Edit</a></li>
         <li class="delete"><a href="{{baseUrl}}spirit/photos/delete">Delete</a></li>
-        <li class="search"><input type="search" placeholder="Search" /></li>
+        <li class="search"><input type="search" placeholder="Search"{{#filterSearch}} value="{{search}}"{{/filterSearch}} /></li>
     </ul>
 </div>
 
