--- a/spirit/views/css/components.css
+++ b/spirit/views/css/components.css
@@ -169,7 +169,7 @@
         opacity: .3;
     }
     .albums li {
-        display: inline;
+        display: inline-block;
         padding: .2em .4em;
         margin-right: .2em;
         margin-bottom: .2em;
