--- a/spirit-content/themes/default/css/style.css
+++ b/spirit-content/themes/default/css/style.css
@@ -1,13 +1,30 @@
+/**
+ * Fonts
+ */
+
+@charset "UTF-8";
+
 @import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,700,700italic');
 
-* {
-    margin: 0;
-    padding: 0;
+@font-face { 
+    font-family: "Ionicons";
+    src: url("../../../../spirit/views/resources/ionicons.eot?v=2.0.0"); 
+    src: url("../../../../spirit/views/resources/ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), 
+         url("../../../../spirit/views/resources/ionicons.ttf?v=2.0.0") format("truetype"), 
+         url("../../../../spirit/views/resources/ionicons.woff?v=2.0.0") format("woff"), 
+         url("../../../../spirit/views/resources/ionicons.svg?v=2.0.0#Ionicons") format("svg");
+    font-weight: normal;
+    font-style: normal;
 }
 
 /**
  * Layout
  */
+
+* {
+    margin: 0;
+    padding: 0;
+}
 
 header {
         padding: 3em 1em;
@@ -32,6 +49,9 @@ header {
 }
 
 #photo {
+        margin: 0 auto;
+        position: relative;
+        max-width: 100%;
         padding: 0;
     }
     #photo p {
@@ -40,6 +60,52 @@ header {
     }
     #photo img {
         max-width: 100%;
+        vertical-align: middle;
+    }
+    #photo nav ul {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        list-style: none;
+    }
+    #photo nav .newer a, #photo nav .older a {
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 50%;
+        text-decoration: none;
+        text-indent: -9999em;
+        opacity: 0;
+    }
+    #photo nav .newer a {
+        left: 50%;
+    }
+    #photo nav .newer a::before, #photo nav .older a::before {
+        margin-top: -1em;
+        position: absolute;
+        right: .5em;
+        top: 50%;
+        content: '\f125';
+        font-family: Ionicons;
+        font-size: 2em;
+        text-indent: 0;
+    }
+    #photo nav .older a::before {
+        content: '\f124';
+        right: auto;
+        left: .5em;
+    }
+    #photo nav .older a:hover, #photo nav .older a:focus {
+        background: linear-gradient(to right, rgba(0, 0, 0, .3) 0%, transparent 50%);
+        opacity: 1;
+    }
+    #photo nav .newer a:hover, #photo nav .newer a:focus {
+        background: linear-gradient(to left, rgba(0, 0, 0, .3) 0%, transparent 50%);
+        opacity: 1;
 }
 
 .post > section {
@@ -68,7 +134,7 @@ header {
     }
     .post .meta .albums {
         margin-bottom: 0;
-    }
+}
 
 /**
  * Typography
