--- a/view/error.phtml
+++ b/view/error.phtml
@@ -10,7 +10,7 @@
 
 <h1>This journal doesn&rsquo;t exist!</h1>
 
-<p>Don&rsquo;t worry, just head back to the <a href="<?php p(BASE_PATH); ?>">homepage</a>.</p>
+<p>Don&rsquo;t worry, just head back to the <a href="<?php p(BASE_PATH) ?>">homepage</a>.</p>
 
 </body>
 </html>
