--- a/view/error.phtml
+++ b/view/error.phtml
@@ -4,6 +4,7 @@
 
 <meta charset="utf-8">
 <title>Error</title>
+<link rel="stylesheet" type="text/css" href="<?php p(BASE_PATH) ?>view/spirit.css" />
 
 </head>
 <body>
