--- a/view/journal.phtml
+++ b/view/journal.phtml
@@ -4,6 +4,9 @@
 
 <meta charset="utf-8">
 <title><?php p($journal['name']) ?></title>
+<link rel="stylesheet" type="text/css" href="<?php p(BASE_PATH) ?>view/spirit.css" />
+<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+<script type="text/javascript" src="<?php p(BASE_PATH) ?>view/journal.js"></script>
 
 </head>
 <body>
@@ -40,7 +43,7 @@
 
     <?php foreach ($journal['photos'] as $photo): ?>
         <article id="<?php p($photo['id']) ?>">
-            <p>
+            <p class="image">
                 <img src="<?php p($photo['src']) ?>" />
 
                 <a href="#<?php p($photo['id']) ?>" title="Permalink">
@@ -53,7 +56,11 @@
                 <?php endif ?>
                 </a>
             </p>
-            <?php if (isset($photo['description'])) echo $photo['description'] ?>
+            <?php if (isset($photo['description'])): ?>
+                <aside>
+                    <?php echo $photo['description'] ?>
+                </aside>
+            <?php endif ?>
         </article>
     <?php endforeach ?>
 </main>
