--- a/view/journal.phtml
+++ b/view/journal.phtml
@@ -6,6 +6,7 @@
 <title><?php p($journal['name']) ?></title>
 <link rel="stylesheet" type="text/css" href="<?php p(BASE_PATH) ?>view/spirit.css" />
 <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+<script type="text/javascript" src="<?php p(BASE_PATH) ?>view/color-thief.js"></script>
 <script type="text/javascript" src="<?php p(BASE_PATH) ?>view/journal.js"></script>
 
 </head>
