--- a/view/spirit.css
+++ b/view/spirit.css
@@ -68,6 +68,7 @@ nav {
     min-height: 100%;
     width: 200px;
     background: #26292C;
+    transition: background .5s;
 }
 
 main {
@@ -77,7 +78,7 @@ main {
         transition: opacity .2s;
     }
     main article.inactive {
-        opacity: .6;
+        /*opacity: .6;*/
     }
     main .image {
         position: relative;
