--- a/view/error.phtml
+++ b/view/error.phtml
@@ -4,12 +4,14 @@
 
 <meta charset="utf-8">
 <title>Error</title>
-<link rel="stylesheet" type="text/css" href="<?php p(BASE_PATH) ?>view/spirit.css" />
+
+<link rel="stylesheet" type="text/css" href="<?php p(BASE_PATH) ?>view/error.css" />
+<link rel="shortcut icon" type="image/x-icon" href="<?php p(BASE_PATH) ?>view/favicon.ico" />
 
 </head>
 <body>
 
-<h1>This journal doesn&rsquo;t exist!</h1>
+<h1><img src="<?php p(BASE_PATH) ?>view/logo-invert.svg" alt="Spirit" width="70" /> This journal doesn&rsquo;t exist!</h1>
 
 <p>Don&rsquo;t worry, just head back to the <a href="<?php p(BASE_PATH) ?>">homepage</a>.</p>
 
