--- a/view/journal.phtml
+++ b/view/journal.phtml
@@ -4,7 +4,10 @@
 
 <meta charset="utf-8">
 <title><?php p($journal['name']) ?></title>
-<link rel="stylesheet" type="text/css" href="<?php p(BASE_PATH) ?>view/spirit.css" />
+
+<link rel="stylesheet" type="text/css" href="<?php p(BASE_PATH) ?>view/journal.css" />
+<link rel="shortcut icon" type="image/x-icon" href="<?php p(BASE_PATH) ?>view/favicon.ico" />
+
 <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 <script type="text/javascript" src="<?php p(BASE_PATH) ?>view/color-thief.js"></script>
 <script type="text/javascript" src="<?php p(BASE_PATH) ?>view/journal.js"></script>
