--- a/view/error.phtml
+++ b/view/error.phtml
@@ -11,9 +11,10 @@
 </head>
 <body>
 
-<h1><img src="<?php p(BASE_PATH) ?>view/logo-invert.svg" alt="Spirit" width="70" /> This journal doesn&rsquo;t exist!</h1>
-
-<p>Don&rsquo;t worry, just head back to the <a href="<?php p(BASE_PATH) ?>">homepage</a>.</p>
+<main>
+    <h1><img src="<?php p(BASE_PATH) ?>view/logo-invert.svg" alt="Spirit" width="70" /> This journal doesn&rsquo;t exist!</h1>
+    <p>Don&rsquo;t worry, just head back to the <a href="<?php p(BASE_PATH) ?>">homepage</a>.</p>
+</main>
 
 </body>
 </html>
