--- a/view/journal.phtml
+++ b/view/journal.phtml
@@ -20,6 +20,12 @@
 <nav>
     <h2>Journals</h2>
 
+    <p>
+        <a href="https://github.com/yishn/Spirit" title="Powered by Spirit">
+            <img src="<?php p(BASE_PATH) ?>view/logo-invert.svg" alt="Spirit" width="40" />
+        </a>
+    </p>
+
     <ol>
         <?php foreach ($journals as $j): ?>
             <?php if ($j['id'] == $journal['id']): ?>
