--- a/view/journal.css
+++ b/view/journal.css
@@ -200,19 +200,19 @@ main {
 .imageset.render {
         position: relative;
         overflow: hidden;
-        transition: height 1s;
     }
     .imageset.render article {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        position: relative;
         opacity: 1;
         z-index: 2;
         transition: opacity 1s, background-color .5s;
     }
     .imageset.render article.inactive {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         z-index: 1;
 }
