--- a/view/journal.css
+++ b/view/journal.css
@@ -156,6 +156,7 @@ main {
     }
     main .image {
         position: relative;
+        overflow: hidden;
     }
     main .image img {
         width: 100%;
@@ -163,8 +164,12 @@ main {
     main .image ul {
         position: absolute;
         right: 0;
-        top: 0;
+        top: -3px;
         font-size: .9em;
+        transition: top .2s;
+    }
+    main .image:hover ul {
+        top: 0;
     }
     main .image ul a {
         display: inline-block;
@@ -225,4 +230,33 @@ main {
         height: 100%;
         opacity: 0;
         z-index: 1;
+}
+
+@media screen and (max-width: 700px) {
+    nav {
+        position: relative;
+        width: auto;
+    }
+
+    nav ol {
+        margin-right: 70px;
+    }
+
+    nav img {
+        left: auto;
+        bottom: 40px;
+        right: 30px;
+        transform: none;
+    }
+
+    main {
+        margin-left: 0;
+    }
+
+    main aside, main article:nth-child(odd) aside {
+        left: 0;
+        width: 100%;
+        padding: 2em;
+        text-align: left;
+    }
 }
