--- a/view/journal.phtml
+++ b/view/journal.phtml
@@ -3,6 +3,8 @@
 <head>
 
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user-scalable=no">
+
 <title><?php p($journal['name']) ?></title>
 
 <link rel="stylesheet" type="text/css" href="<?php p(BASE_PATH) ?>view/journal.css" />
