Use minimum image height for imageset height

--- a/view/journal.css
+++ b/view/journal.css
@@ -207,6 +207,7 @@ main {
 
 .imageset.render {
         position: relative;
+        overflow: hidden;
     }
     .imageset.render .progress {
         position: absolute;
