--- a/static/main.css
+++ b/static/main.css
@@ -5,18 +5,23 @@
 }
 
 html {
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+  scroll-snap-type: y proximity;
+  scroll-snap-align: start;
+}
+
+body {
   --standard-padding: 1rem;
   --background-color: rgb(25, 25, 25);
   --color: rgb(238, 238, 238);
-  --link-color: rgb(157, 148, 223);
+  --link-color: rgb(160, 149, 240);
   background-color: var(--background-color);
   color: var(--color);
   color-scheme: dark;
   font-family: Inter, sans-serif;
   line-height: 1.5;
-  scrollbar-width: thin;
-  scroll-snap-type: y proximity;
-  scroll-snap-align: start;
+  transition: background-color 1s, color 1s;
 }
 
 a {
@@ -29,6 +34,7 @@ a:hover {
 }
 
 #root {
-  margin: 1rem auto;
+  margin: 0 auto;
+  padding: 1rem 0;
   max-width: 30rem;
 }
