--- a/static/main.css
+++ b/static/main.css
@@ -10,6 +10,7 @@ html {
 
 body {
   --standard-padding: 1rem;
+  --main-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"/>');
   --background-color: rgb(25, 25, 25);
   --color: rgb(238, 238, 238);
   --link-color: rgb(160, 149, 240);
@@ -21,7 +22,9 @@ body {
   color-scheme: dark;
   font-family: Inter, sans-serif;
   line-height: 1.5;
-  transition: background-color 1s, color 1s;
+  transition:
+    background-color 1s,
+    color 1s;
 }
 
 a {
@@ -39,4 +42,21 @@ a:hover {
   margin: 0 auto;
   padding: 1px 0;
   max-width: var(--max-width);
+}
+
+/* Background image blur */
+#root::before {
+  content: " ";
+  position: fixed;
+  top: -10%;
+  left: -10%;
+  width: 110%;
+  height: 110%;
+  background-image: var(--main-image);
+  background-size: cover;
+  background-position: center;
+  filter: blur(3rem);
+  opacity: 0.1;
+  z-index: -1;
+  transition: background-image 1s;
 }
