Add render*() methods

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
       </template>
 
       <template id="journey-list-item-template">
-        <journey-list-item href="./{{listId}}/{{id}}/">
+        <journey-list-item href="./{{id}}/">
           <img slot="img" alt="" src="{{imgSrc}}" />
           {{name}}
         </journey-list-item>
