--- a/templates/journey.html
+++ b/templates/journey.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>{{title}}</title>
+    <title>{{name}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <link
@@ -16,14 +16,13 @@
   </head>
   <body>
     <div id="root">
-      <header-bar back-href="../../">{{name}} {{listName}}</header-bar>
+      <header-bar back-href="../../">{{name}}</header-bar>
 
       <photo-feed>{{items}}</photo-feed>
 
       <template id="photo-feed-item-template">
         <photo-feed-item id="{{id}}" location="{{location}}" date="{{date}}">
           <img slot="img" src="{{imgSrc}}" alt="" />
-
           {{description}}
         </photo-feed-item>
       </template>
@@ -31,7 +30,6 @@
       <template id="photo-feed-item-imageset-template">
         <photo-feed-item id="{{id}}" location="{{location}}" date="{{date}}">
           <photo-feed-imageset slot="img">{{images}}</photo-feed-imageset>
-
           {{description}}
         </photo-feed-item>
       </template>
