Add GlobalStyle and MarkdownContent

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,15 @@
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
     <script src="./main.js"></script>
   </head>
   <body>
+    <global-style></global-style>
+
     <div id="root">
       <header-bar>{{title}}</header-bar>
+
+      <markdown-content>{{content}}</markdown-content>
 
       {{lists}}
 
