--- a/templates/journey.html
+++ b/templates/journey.html
@@ -19,14 +19,24 @@
       <photo-feed>{{items}}</photo-feed>
 
       <template id="photo-feed-item-template">
-        <photo-feed-item id="{{id}}" location="{{location}}" date="{{date}}">
+        <photo-feed-item
+          id="{{id}}"
+          location="{{location}}"
+          location-href="https://www.google.com/maps/search/{{location}}"
+          date="{{date}}"
+        >
           <img slot="img" src="{{imgSrc}}" alt="" />
           {{description}}
         </photo-feed-item>
       </template>
 
       <template id="photo-feed-item-imageset-template">
-        <photo-feed-item id="{{id}}" location="{{location}}" date="{{date}}">
+        <photo-feed-item
+          id="{{id}}"
+          location="{{location}}"
+          location-href="https://www.google.com/maps/search/{{location}}"
+          date="{{date}}"
+        >
           <photo-feed-imageset slot="img">{{images}}</photo-feed-imageset>
           {{description}}
         </photo-feed-item>
