--- a/templates/journey.html
+++ b/templates/journey.html
@@ -6,13 +6,13 @@
     <title>{{name}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <script src="../../main.js"></script>
+    <script src="../main.js"></script>
   </head>
   <body>
     <global-style></global-style>
 
     <div id="root">
-      <header-bar back-href="../../">{{name}}</header-bar>
+      <header-bar back-href="../">{{name}}</header-bar>
 
       <markdown-content>{{content}}</markdown-content>
 
